# water-wars

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  log  package.yaml  result  shell.nix  stack.yaml  water-wars.cabal
benchmark/: Main.hs
client/: Main.hs  package.yaml  water-wars-client.cabal
client/app/: Main.hs
client/src/WaterWars/Client/: OptParse.hs
client/src/WaterWars/Client/Network/: Connection.hs  State.hs
client/src/WaterWars/Client/Render/: Display.hs  State.hs  Update.hs
client/src/WaterWars/Client/Resources/: Block.hs
debug/: Main.hs
docs/: Water Wars in Haskell.md  water-wars-client-new.uxf  water-wars-client.uxf  water-wars-server.uxf
executable/: Main.hs
resources/: game1.txt  game2.txt
resources/textures/: background with sprites.ase  background.ase  bubble.ase  bubble_smaller.ase  coral.ase  crab.ase  jellyfish.ase  manta.ase  snail.ase  umbrella.ase  whaley.aseprite
resources/textures/mermaid/running/: script.sh
server/: Main.hs  package.yaml  water-wars-server.cabal
server/app/: Main.hs  OptParse.hs  Terrains.hs
server/src/WaterWars/Server/: ClientConnection.hs  ConnectionMgnt.hs  Env.hs  EventLoop.hs  Events.hs  GameLoop.hs  OptParse.hs  State.hs
server/src/WaterWars/Server/Action/: Restart.hs  Start.hs  Util.hs
test-suite/: Main.hs
test-suite/WaterWars/Core/: CollisionTest.hs  GameNgTest.hs  GameUtilsTest.hs  GeometryTest.hs  PhysicsTest.hs  Terrains.hs  TerrainsUtils.hs
test-suite/WaterWars/Server/: GameNgTest.hs
