cabal-version: 1.12

name:           water-wars-client
version:        0.0.0
synopsis:       Water Wars client library
homepage:       https://github.com/FailWhaleBrigade/water-wars#readme
bug-reports:    https://github.com/FailWhaleBrigade/water-wars/issues
author:         Fendor, VeryMilkyJoe, Power-Fungus
maintainer:     Fendor, VeryMilkyJoe, Power-Fungus
license:        MIT
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/FailWhaleBrigade/water-wars

library
  exposed-modules:
      WaterWars.Client.Codec.Resource
      WaterWars.Client.Network.Connection
      WaterWars.Client.Network.State
      WaterWars.Client.OptParse
      WaterWars.Client.Render.Animation
      WaterWars.Client.Render.Config
      WaterWars.Client.Render.Display
      WaterWars.Client.Render.State
      WaterWars.Client.Render.Terrain.Solid
      WaterWars.Client.Render.Update
      WaterWars.Client.Resources.Block
      WaterWars.Client.Resources.Resources
  other-modules:
      Paths_water_wars_client
  hs-source-dirs:
      src
  default-extensions: DeriveGeneric NamedFieldPuns OverloadedStrings NoImplicitPrelude ScopedTypeVariables RecordWildCards LambdaCase FlexibleContexts MonoLocalBinds
  ghc-options: -Wall -eventlog
  build-depends:
      JuicyPixels
    , array
    , base
    , classy-prelude
    , extensible-effects >=3.1 && <3.2
    , gloss
    , monad-logger
    , mtl
    , optparse-applicative
    , proteaaudio
    , stm
    , transformers
    , water-wars
    , websockets
  default-language: Haskell2010

executable water-wars-client
  main-is: Main.hs
  other-modules:
      Paths_water_wars_client
  hs-source-dirs:
      app
  default-extensions: NamedFieldPuns OverloadedStrings NoImplicitPrelude ScopedTypeVariables RecordWildCards FlexibleContexts
  ghc-options: -Wall -eventlog -rtsopts -threaded -O2 -with-rtsopts=-N
  build-depends:
      base
    , classy-prelude
    , ekg
    , gloss
    , monad-logger
    , mtl
    , optparse-applicative
    , proteaaudio
    , stm
    , transformers
    , water-wars
    , water-wars-client
  default-language: Haskell2010
