cabal-version: 2.4
name: water-wars-client
version: 0.0.0
synopsis: Water Wars client library
homepage: https://github.com/FailWhaleBrigade/water-wars#readme
bug-reports: https://github.com/FailWhaleBrigade/water-wars/issues
author: Fendor, VeryMilkyJoe, Power-Fungus
maintainer: Fendor, VeryMilkyJoe, Power-Fungus
license: MIT
build-type: Simple

source-repository head
  type: git
  location: https://github.com/FailWhaleBrigade/water-wars

library
  exposed-modules:
    WaterWars.Client.Codec.Resource
    WaterWars.Client.Network.Connection
    WaterWars.Client.Network.State
    WaterWars.Client.OptParse
    WaterWars.Client.Render.Animation
    WaterWars.Client.Render.Config
    WaterWars.Client.Render.Display
    WaterWars.Client.Render.State
    WaterWars.Client.Render.Terrain.Solid
    WaterWars.Client.Render.Update
    WaterWars.Client.Resources.Block
    WaterWars.Client.Resources.Resources

  other-modules:
    Paths_water_wars_client

  hs-source-dirs:
    src

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MonoLocalBinds
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

  ghc-options:
    -Wall

  build-depends:
    JuicyPixels,
    array,
    base,
    classy-prelude,
    gloss,
    monad-logger,
    mtl,
    optparse-applicative,
    proteaaudio,
    stm,
    transformers,
    water-wars,
    websockets,

  default-language: Haskell2010

executable water-wars-client
  main-is: Main.hs
  other-modules:
    Paths_water_wars_client

  hs-source-dirs:
    app

  default-extensions:
    FlexibleContexts
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

  ghc-options:
    -Wall
    -rtsopts
    -threaded
    -O2
    -with-rtsopts=-N

  build-depends:
    base,
    classy-prelude,
    gloss,
    monad-logger,
    mtl,
    optparse-applicative,
    stm,
    transformers,
    water-wars,
    water-wars-client,

  default-language: Haskell2010
